[tool.poetry]
name = "account transactions"
version = "0.1.0"
description = ""
authors = ["Almaz Muzafarov <muzafrov.almaz2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
develop = "^0.2.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
